--- a/src/config/templates/layout.hbs
+++ b/src/config/templates/layout.hbs
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>{{title}}</title>
   </head>
-<body>This is the body {{end}} - at the end {{{content}}}</body>
+<body>
+  {{{header}}}
+  {{{content}}}
+  {{{footer}}}
+</body>
 </html>
