added read more to home page

--- a/src/config/templates/layout.hbs
+++ b/src/config/templates/layout.hbs
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link href="{{cssPath}}" rel="stylesheet">
     <title>{{title}}</title>
   </head>
 <body>
-  {{{header}}}
+  <header>
+    {{{header}}}
+  </header>
+  
   {{{content}}}
-  {{{footer}}}
+
+  <footer>
+    {{{footer}}}
+  </footer>
 </body>
 </html>
