typography added to article

--- a/src/config/templates/layout.hbs
+++ b/src/config/templates/layout.hbs
@@ -8,13 +8,18 @@
   </head>
 <body>
   <header>
-    {{{header}}}
+    <div class='content-wrapper'>
+      {{{header}}}
+    </div>
   </header>
   
   {{{content}}}
 
   <footer>
-    {{{footer}}}
+    <div class='content-wrapper'>
+      {{{footer}}}
+    </div>
   </footer>
+
 </body>
 </html>
