--- a/src/config/templates/notes.hbs
+++ b/src/config/templates/notes.hbs
@@ -3,9 +3,9 @@
     <article>
       <div class="content-wrapper">
         <h2>{{title}}</h2>
-        <small class='date'>December 12th, 2019 &middot; Tech, C#</small>
+        <small class='date'>December 12th, 2019 <span class='dot'>&middot;</span> Tech, C#</small>
         <p>{{content}}</p>
-        <p><a href='{{url}}'>Read more</a></p>
+        <p><a href='{{url}}'>read more</a></p>
       </div>
     </article>
   {{/each}}  
