included momentjs for publishedAt

--- a/src/config/templates/note.hbs
+++ b/src/config/templates/note.hbs
@@ -1,7 +1,7 @@
 <article>
   <div class="content-wrapper">
     <h2>{{title}}</h2>
-    <small class='date'>December 12th, 2019 <span class='dot'>&middot;</span> Tech, C#</small>
+    <small class='date'>{{publishedAt}} <span class='dot'>&middot;</span> Tech, C#</small>
     {{{content}}}
   </div>
 </article>
