--- a/src/config/templates/notes.hbs
+++ b/src/config/templates/notes.hbs
@@ -3,7 +3,7 @@
     <article>
       <div class="content-wrapper">
         <h2>{{title}}</h2>
-        <small class='date'>December 12th, 2019 <span class='dot'>&middot;</span> Tech, C#</small>
+        <small class='date'>{{publishedAt}}<span class='dot'>&middot;</span> Tech</small>
         <p>{{content}}</p>
         <p><a href='{{url}}'>read more</a></p>
       </div>
