--- a/src/lib/config/templates/main.css
+++ b/src/lib/config/templates/main.css
@@ -106,6 +106,10 @@ footer {
   padding: 0 16px;
 }
 
+article IMG {
+  width: 100%;
+}
+
 @media all and (max-width: 699px) {
   header,
   footer {
