--- a/src/lib/config/templates/main.css
+++ b/src/lib/config/templates/main.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lora:400|Poppins:400");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@500&display=swap");
 
 html {
   font-size: 100%;
@@ -13,7 +15,7 @@ body {
 
 body {
   background-color: white;
-  font-family: "Merriweather", serif;
+  font-family: "Cardo", serif;
   font-weight: 400;
   line-height: 2;
   color: #333;
@@ -23,47 +25,48 @@ a {
   color: #ed254e;
   text-decoration: none;
 }
+a:hover {
+  text-decoration: underline;
+}
+
 p {
   margin-bottom: 1.15rem;
   font-size: 1.2rem;
 }
-
 h1,
 h2,
 h3,
 h4,
 h5 {
-  margin: 2.75rem 0 1.05rem;
-  font-family: "Lora", serif;
-  font-weight: 400;
-  line-height: 1.15;
+  margin: 3rem 0 1.38rem;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.3;
 }
 
 h1 {
   margin-top: 0;
-  font-size: 3.052em;
+  font-size: 4.209rem;
 }
 
 h2 {
-  font-size: 2.441em;
+  font-size: 3.157rem;
 }
 
 h3 {
-  font-size: 1.953em;
+  font-size: 2.369rem;
 }
 
 h4 {
-  font-size: 1.563em;
+  font-size: 1.777rem;
 }
 
 h5 {
-  font-size: 1.25em;
+  font-size: 1.333rem;
 }
 
 small,
-.text-small {
-  font-family: "Merriweather", serif;
-  font-size: 0.8em;
+.text_small {
+  font-size: 0.75rem;
 }
 
 article {
@@ -86,22 +89,25 @@ article small.date span.dot {
   margin-top: 80px;
 }
 
+header h1,
+header h2,
+header h3 {
+  margin-top: 1rem;
+}
+
 header p {
   margin: 0;
 }
 
 header {
-  padding: 40px 0;
-  border-bottom: 1px solid #ccc;
 }
 
 footer {
   padding: 40px 0;
-  border-top: 1px solid #ccc;
 }
 
 .content-wrapper {
-  max-width: 800px;
+  max-width: 1100px;
   margin: 0px auto;
   padding: 0 16px;
 }
@@ -111,6 +117,12 @@ article IMG {
 }
 
 @media all and (max-width: 699px) {
+  header h1,
+  header h2,
+  header h3 {
+    margin-top: 0rem;
+  }
+
   header,
   footer {
     padding: 16px 0;
