--- a/src/lib/config/templates/main.css
+++ b/src/lib/config/templates/main.css
@@ -117,10 +117,43 @@ article IMG {
 }
 
 @media all and (max-width: 699px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    margin: 3rem 0 1.38rem;
+    font-family: "Montserrat", sans-serif;
+    line-height: 1.3;
+    letter-spacing: -0.18rem;
+  }
+
+  h1 {
+    margin-top: 0;
+    font-size: 2.488rem;
+  }
+
+  h2 {
+    font-size: 2.074rem;
+  }
+
+  h3 {
+    font-size: 1.728rem;
+  }
+
+  h4 {
+    font-size: 1.44rem;
+  }
+
+  h5 {
+    font-size: 1.2rem;
+  }
+
   header h1,
   header h2,
   header h3 {
     margin-top: 0rem;
+    margin-bottom: 0rem;
   }
 
   header,
