--- a/src/lib/config/templates/main.css
+++ b/src/lib/config/templates/main.css
@@ -103,7 +103,7 @@ header {
 }
 
 footer {
-  padding: 40px 0;
+  padding: 0 0 40px 0;
 }
 
 .content-wrapper {
@@ -158,7 +158,7 @@ article IMG {
 
   header,
   footer {
-    padding: 16px 0;
+    padding: 0 0 16px 0;
   }
 
   footer p {
